Updated the Video page

--- a/video.html
+++ b/video.html
@@ -31,19 +31,19 @@
         </nav>
         <div class="display">
             <div class="video-section">
-                <img src="Assets/video.png" alt="">
+                <img  id="video" src="Assets/video.png" alt="">
                 <div class="main-video-info">
-                    <h3>Blind WoodTurner: Turning Passion into fine arts</h3>
+                    <h3 id="title">Blind WoodTurner: Turning Passion into fine arts</h3>
                     <div class="likes-views">
                         <div class="views-time">
                             <p>555,566 views</p>
                              <p>Oct 8,2021</p>
                         </div>
                         <div class="like-share">
-                           <span> <img src="Assets/sideNav/liked.svg" alt="">1.7k</span>
-                           <span> <img src="Assets/disLike.svg" alt="">555</span>
-                           <span> <img src="Assets/Share.svg" alt="">Share</span>
-                           <span> <img src="Assets/ico-tv.svg" alt="">Save</span>
+                           <span> <img src="Assets/sideNav/liked.svg" alt=""><p>1.7k</p></span>
+                           <span> <img src="Assets/disLike.svg" alt=""><p>555</p></span>
+                           <span> <img src="Assets/Share.svg" alt=""><p>Share</p></span>
+                           <span> <img src="Assets/ico-tv.svg" alt=""><p>Save</p></span>
                            <img src="Assets/Button-Btn.svg" alt="">
                         </div>
                     </div>
@@ -51,8 +51,8 @@
                 <div class="channel-description">
                     <div class="channel-info">
                         <div class="logo">
-                          <div class="channel-logo">p</div>
-                            <div class="channel-name">
+                          <div  class="channel-logo"><img  id="channel-logo" src="Assets/userImg.jfif" alt=""></div>
+                            <div id="channel-name" class="channel-name">
                                 <p>Marcus Brownlee</p>
                                 <p>1.2M subscribers</p>
                             </div>
@@ -61,7 +61,7 @@
                             SUBSCRIBE
                         </div>
                     </div>
-                    <div class="description">
+                    <div id="description" class="description">
                         <p>Chris Fisher, also known as the Blind Woodturner, learned his craft by listening to hundreds of hours
                              of YouTube videos and experimenting in his workshop.  Now he’s a YouTube creator himself, sells his 
                              products worldwide, and does demonstrations all around the country.</p>
@@ -101,7 +101,7 @@
                     <div class="video-info">
                        
                  
-                        <div class="video-title">
+                        <div class="video-Title">
                             <p id="title">Lorem ipsum dolor sit amet </p>
                             <p id="channel-name">James Couse</p>
                             <div class="views-time">
@@ -114,5 +114,6 @@
             </div>
         </div>
         </div>
+       <script src="video.js"></script>
 </body>
 </html>
