added Likes and Views data

--- a/video.html
+++ b/video.html
@@ -36,12 +36,12 @@
                     <h3 id="title">Blind WoodTurner: Turning Passion into fine arts</h3>
                     <div class="likes-views">
                         <div class="views-time">
-                            <p>555,566 views</p>
-                             <p>Oct 8,2021</p>
+                            <p id="views">555,566 views</p>
+                             <p id="publish">Oct 8,2021</p>
                         </div>
                         <div class="like-share">
-                           <span> <img src="Assets/sideNav/liked.svg" alt=""><p>1.7k</p></span>
-                           <span> <img src="Assets/disLike.svg" alt=""><p>555</p></span>
+                           <span> <img src="Assets/sideNav/liked.svg" alt=""><p id="likes">1.7k</p></span>
+                           <span> <img src="Assets/disLike.svg" alt=""></span>
                            <span> <img src="Assets/Share.svg" alt=""><p>Share</p></span>
                            <span> <img src="Assets/ico-tv.svg" alt=""><p>Save</p></span>
                            <img src="Assets/Button-Btn.svg" alt="">
@@ -69,7 +69,7 @@
                     </div>
                     <div class="comment-section">
                         <div class="comment-info">
-                            <p>286 Comments</p>
+                            <p id="comment">286 Comments</p>
                             <div> <i class="fa-solid fa-arrow-up-wide-short"></i> SORT BY</div>
                         </div>
                         <div class="comment-input">
